--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,6 +24,7 @@
 * {
 	box-sizing: border-box;
 	font-family: 'Outfit', sans-serif;
+	-webkit-tap-highlight-color: transparent;
 }
 
 ::-webkit-scrollbar {
