--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -307,6 +307,7 @@
 }
 
 .main-content > .personal-section .banner {
+	margin-top: 20px;
 	width: 100%;
 	height: 30%;
 
@@ -873,6 +874,7 @@
 
 .swiper-button-next,
 .swiper-button-prev {
+	top: 110px;
 	color: var(--bg-lv1);
 	transition: all 0.3s ease;
 }
@@ -882,6 +884,11 @@
 }
 
 @media screen and (max-width: 750px) {
+	.main-content .personal-section {
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+
 	.main-content .search-bar input,
 	.main-content .search-bar .suggest-list {
 		width: 85%;
