Hide Scroll Bar on Mobile View

--- a/src/css/category_sidebar.css
+++ b/src/css/category_sidebar.css
@@ -368,6 +368,10 @@ body > .new-pl-modal input:focus {
 	body > .new-pl-modal .new-pl-banner a > span {
 		display: none;
 	}
+
+	.category-sidebar .music-option:hover::-webkit-scrollbar-thumb {
+		background-color: transparent;
+	}
 }
 
 /* .link {
