--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,3 +78,15 @@ a:focus {
 	width: 100%;
 	height: 100%;
 }
+
+.bi {
+	font-size: 1.2em;
+}
+
+.bi-heart:hover::before {
+	transform: scale(1.3);
+}
+
+.bi-heart-fill {
+	animation: beat 0.4s infinite linear alternate;
+}
