--- a/src/css/category_sidebar.css
+++ b/src/css/category_sidebar.css
@@ -170,7 +170,7 @@ body > .ad-modal .banner-modal-ad__content > img {
 	height: auto;
 }
 body > .ad-modal .banner-modal-ad__content > img:hover {
-	animation: blink linear 1s 0s infinite;
+	animation: blink linear 0.6s infinite alternate;
 }
 
 body > .new-pl-modal .new-pl-banner__content > div {
@@ -237,21 +237,6 @@ body > .new-pl-modal input {
 body > .new-pl-modal input:focus {
 	outline: none;
 	border-color: rgb(0, 36, 59);
-}
-
-@keyframes blink {
-	33% {
-		opacity: 0.7;
-		transform: scale(0.9);
-	}
-	66% {
-		opacity: 1;
-		transform: scale(1.1);
-	}
-	100% {
-		opacity: 1;
-		transform: scale(1);
-	}
 }
 
 .category-sidebar .new-pl-banner,
