--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,6 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600&display=swap');
+
 :root {
 	--bg-lv0: #000000;
 	--bg-lv1: #f4f4f4;
@@ -23,7 +26,9 @@
 
 * {
 	box-sizing: border-box;
-	font-family: 'Outfit', sans-serif;
+	/* font-family: 'Outfit', sans-serif; */
+	font-family: 'Dosis', sans-serif;
+	font-weight: 400;
 	-webkit-tap-highlight-color: transparent;
 }
 
