--- a/src/css/category_sidebar.scss
+++ b/src/css/category_sidebar.scss
@@ -1,3 +1,9 @@
+%flexCenter {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 .category-sidebar {
 	background-color: var(--bg-lv8);
 	border-right: 1px solid var(--bg-lv6);
@@ -11,47 +17,56 @@
 	height: calc(100vh - 90px);
 	padding: 70px 0 54px;
 	transition: all 0.5s ease;
-	.music-option {
-		overflow: hidden scroll;
-		position: relative;
-		width: 100%;
-		height: 100%;
-		&:hover {
-			&::-webkit-scrollbar-thumb {
-				background-color: var(--bg-lv2);
-				background-color: transparent;
-			}
-		}
-	}
-	.item {
-		cursor: pointer;
-		height: 38px;
-		margin-left: 3px;
-		padding: 7px 25px;
-		transition: background 0.5s ease;
-		.bi {
-			font-size: unset;
-		}
-		i {
-			margin-right: 10px;
-		}
-		&:hover {
-			opacity: 0.6;
-		}
+
+	.title,
+	.title a {
+		color: var(--bg-lv0);
+		font-size: 1.4rem;
+		font-weight: bold;
+		display: flex;
+		align-items: center;
+		justify-content: space-around;
+		position: fixed;
+		top: 0;
+		z-index: 10;
+		width: 240px;
+		height: 70px;
+		padding: 0 25px;
 	}
 	.menu {
 		position: relative;
-		display: flex;
-		align-items: center;
+		@extend %flexCenter;
 		flex-direction: column;
-		justify-content: center;
-		width: 100%;
 		margin-bottom: 15px;
+		width: 100%;
 	}
 	.list {
 		font-size: 1.2rem;
 		width: 100%;
 		margin: 0;
+
+		.item {
+			cursor: pointer;
+			height: 38px;
+			margin-left: 3px;
+			padding: 7px 25px;
+			transition: background 0.5s ease;
+			&:hover {
+				opacity: 0.6;
+			}
+			&:hover,
+			&.active {
+				background-color: var(--bg-lv6);
+				border-left: 5px solid var(--bg-lv0);
+			}
+
+			.bi {
+				font-size: unset;
+			}
+			i {
+				margin-right: 10px;
+			}
+		}
 	}
 	.horizone-line {
 		position: relative;
@@ -67,14 +82,27 @@
 			height: 0;
 		}
 	}
-	.option-scroll-bar {
-		position: absolute;
+	.music-option {
+		overflow: hidden scroll;
+		position: relative;
 		width: 100%;
 		height: 100%;
-		margin: 10px -6px 0 0;
-	}
-	.option-list {
-		margin: 5px 0 0;
+		&:hover {
+			&::-webkit-scrollbar-thumb {
+				background-color: var(--bg-lv2);
+				background-color: transparent;
+			}
+		}
+
+		.option-scroll-bar {
+			margin: 10px -6px 0 0;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+		}
+		.option-list {
+			margin: 5px 0 0;
+		}
 	}
 	.banner-modal-ad-link {
 		color: rgb(189, 80, 29);
@@ -91,79 +119,35 @@
 		bottom: 90px;
 		width: inherit;
 		height: 54px;
+		.new-playlist-btn {
+			color: var(--bg-lv0);
+			font-size: 1.2rem;
+			cursor: pointer;
+			display: flex;
+			align-items: center;
+			justify-content: flex-start;
+			width: 100%;
+			height: 54px;
+			padding: 0 28px;
+		}
 	}
-	.new-playlist-btn {
-		color: var(--bg-lv0);
-		font-size: 1.2rem;
-		cursor: pointer;
-		display: flex;
-		align-items: center;
-		justify-content: flex-start;
-		width: 100%;
-		height: 54px;
-		padding: 0 28px;
-	}
-}
-
-.category-sidebar .title,
-.category-sidebar .title a {
-	color: var(--bg-lv0);
-	font-size: 1.4rem;
-	font-weight: bold;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	position: fixed;
-	top: 0;
-	z-index: 10;
-	width: 240px;
-	height: 70px;
-	padding: 0 25px;
-}
-
-.category-sidebar .item:hover,
-.category-sidebar .item.active {
-	background-color: var(--bg-lv6);
-	border-left: 5px solid var(--bg-lv0);
-}
-
-body > .new-pl-modal,
-body > .ad-modal {
-	display: none;
-	background-color: rgba(0, 0, 0, 0.616);
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 100;
-	width: 100vw;
-	height: 100vh;
-}
-body > .new-pl-modal.active,
-body > .ad-modal.active {
-	display: block;
-}
-body > .new-pl-modal .new-pl-banner,
-body > .ad-modal .banner-modal-ad {
-	background: linear-gradient(33deg, #5a1eae -7%, #ce267a 117%);
-	border-radius: 8px;
-	text-align: center;
-	color: var(--bg-lv0);
-	display: block;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 40vw;
-	height: 70vh;
-	padding: 15px 8px;
-	line-height: 1.5;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	justify-content: space-around;
 }
 
 body {
+	& > .new-pl-modal,
+	& > .ad-modal {
+		background-color: rgba(0, 0, 0, 0.616);
+		position: fixed;
+		display: none;
+		z-index: 100;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+		&.active {
+			display: block;
+		}
+	}
 	& > .new-pl-modal {
 		.new-pl-banner {
 			height: auto;
@@ -172,16 +156,14 @@ body {
 				max-width: 250px;
 				margin: auto;
 				& > span {
-					display: none;
+					display: block;
 				}
 			}
 		}
-		.new-pl-banner__content {
-			& > div {
-				padding: 0 5px;
-				margin: 6px auto;
-				font-size: 3.5vh;
-			}
+		.new-pl-banner__content > div {
+			padding: 0 5px;
+			margin: 6px auto;
+			font-size: 3.5vh;
 		}
 		.new-pl-banner__overlay {
 			position: absolute;
@@ -192,11 +174,12 @@ body {
 		}
 		input {
 			display: block;
-			margin: 15px auto;
 			max-width: 80%;
 			padding: 7px 5px;
-			border: 3px solid white;
+			margin: 15px auto;
+			font-size: 1.3rem;
 			border-radius: 10px;
+			border: 3px solid white;
 			transition: all 0.3 ease;
 			&:focus {
 				outline: none;
@@ -204,7 +187,6 @@ body {
 			}
 		}
 	}
-
 	& > .ad-modal {
 		.banner-modal-ad__content {
 			& > img {
@@ -228,31 +210,53 @@ body {
 			}
 		}
 	}
-}
 
-body > .new-pl-modal .new-pl-banner__content,
-body > .ad-modal .banner-modal-ad__content {
-	width: 80%;
-	height: 70%;
-}
-body > .new-pl-modal .new-pl-banner a,
-body > .ad-modal .banner-modal-ad > a {
-	background-color: #ffdb00;
-	border-color: #ffdb00;
-	border-radius: 25px;
-	color: rgb(189, 80, 29);
-	font-weight: 600;
-	font-size: 4.2vh;
-	padding: 6px 35px;
-	margin-top: 7px;
-	transition: all 0.3s ease;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-body > .new-pl-modal .new-pl-banner a > span,
-body > .ad-modal .banner-modal-ad > a > span {
-	margin-left: 10px;
+	& > .new-pl-modal .new-pl-banner,
+	& > .ad-modal .banner-modal-ad {
+		background: linear-gradient(33deg, #5a1eae -7%, #ce267a 117%);
+		border-radius: 8px;
+		text-align: center;
+		color: var(--bg-lv0);
+		display: block;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 40vw;
+		height: 70vh;
+		padding: 15px 8px;
+		line-height: 1.5;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		justify-content: space-around;
+	}
+
+	& > .new-pl-modal .new-pl-banner__content,
+	& > .ad-modal .banner-modal-ad__content {
+		width: 80%;
+		height: 70%;
+	}
+	& > .new-pl-modal .new-pl-banner a,
+	& > .ad-modal .banner-modal-ad > a {
+		background-color: #ffdb00;
+		border-color: #ffdb00;
+		border-radius: 25px;
+		color: rgb(189, 80, 29);
+		font-weight: 600;
+		font-size: 4.2vh;
+		@extend %flexCenter;
+		padding: 6px 35px;
+		margin-top: 7px;
+		transition: all 0.3s ease;
+	}
+	& > .new-pl-modal .new-pl-banner a > span,
+	& > .ad-modal .banner-modal-ad > a > span {
+		margin-left: 10px;
+	}
+	& > .new-pl-modal .new-pl-banner a > span {
+		font-size: 1.4rem;
+	}
 }
 
 .category-sidebar .new-pl-banner,
@@ -292,38 +296,37 @@ body > .ad-modal .banner-modal-ad > a > span {
 		width: 100%;
 		height: 100px;
 		background-color: rgba(255, 255, 255, 0.6);
-		transform: skewY(45deg) translateY(210px);
+		transform: skewY(45deg) translateY(250px);
 		transition: all 0.7s ease;
 	}
-
 	&:hover {
 		transform: translateY(3px);
 		&::before {
-			transform: skewY(45deg) translateY(-220px);
+			transform: skewY(45deg) translateY(-250px);
 		}
 	}
 }
 
 @media screen and (max-width: 1024px) {
+	body > .new-pl-modal .new-pl-banner a > span,
 	.banner-modal-ad-link,
-	.category-sidebar .item span,
+	.category-sidebar .list .item span,
 	.category-sidebar .title .app-name,
 	.category-sidebar .banner-modal-ad,
 	.category-sidebar .create-new-playlist span {
 		display: none;
 	}
 
-	.category-sidebar .item:hover,
-	.category-sidebar .item.active {
+	.category-sidebar .list .item:hover,
+	.category-sidebar .list .item.active {
 		background-color: var(--bg-lv6);
 		border: none;
 	}
-	.category-sidebar .item,
-	.category-sidebar .item i {
+	.category-sidebar .list .item,
+	.category-sidebar .list .item i {
 		margin: 0;
 	}
 }
-
 @media screen and (max-width: 750px) {
 	body > .new-pl-modal .new-pl-banner a {
 		width: 100px;
