--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -50,6 +50,10 @@
   justify-content: flex-start;
 }
 
+.main-content .top-bar .parts .part1 > .top-ico:hover {
+  transform: scale(1.4);
+}
+
 .main-content .top-bar .parts .part2 {
   position: relative;
   display: flex;
@@ -278,7 +282,7 @@
   align-items: center;
   justify-content: flex-start;
   position: relative;
-  border-radius: 4px;
+  border-radius: 20px;
   padding: 8px 10px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -286,12 +290,16 @@
   cursor: pointer;
 }
 
+.main-content .top-bar .search-bar .suggest-item:hover {
+  background-color: var(--bg-lv5);
+}
+
 .main-content .top-bar .search-bar .suggest-item span {
   margin-left: 10px;
-  display: block;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .main-content > .personal-section {
@@ -407,13 +415,13 @@
   border-top-left-radius: 5px;
   border-bottom-right-radius: 15px;
   border-bottom-left-radius: 5px;
-  transition: all 0.3s ease-in-out;
-  transition: background 0.3s 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  transition: background 0.2s 0.2s ease-in-out;
 }
 
 .main-content > .personal-section section > .title > span > a {
   color: var(--bg-lv0);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .main-content > .personal-section section > .title > span > a::before {
@@ -426,7 +434,7 @@
   z-index: 10;
   height: 100%;
   border-radius: 50px;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .main-content > .personal-section section > .title > span > a::after {
@@ -444,7 +452,7 @@
   border-bottom: 0;
   border-left: 0;
   transform: translateX(-42px) rotate(45deg);
-  transition: all 0.3s 0.1s ease-in-out;
+  transition: all 0.2s 0.1s ease-in-out;
 }
 
 .main-content > .personal-section section > .title > span:hover {
@@ -621,6 +629,7 @@
 }
 
 #songs .section-content .song-list .song-item .left {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -628,6 +637,8 @@
 
 #songs .section-content .song-list .song-item .left .left-content {
   position: relative;
+  font-size: 1.1rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -636,7 +647,7 @@
 
 #songs .section-content .song-list .song-item .left .left-content .song-title,
 #songs .section-content .song-list .song-item .left .left-content .song-artist {
-  width: 120px;
+  width: 80%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -704,6 +715,23 @@
   text-align: center;
   padding: 10px;
   font-size: 1.2rem;
+}
+
+#playlist .swiper-container {
+  width: calc(100% - 180px);
+  height: 230px;
+}
+
+#playlist .swiper-container .swiper-pagination .swiper-pagination-bullet {
+  background-color: #6f7073;
+  margin: 0 5px;
+  border-radius: 5px;
+  transition: all 0.4s ease;
+}
+
+#playlist .swiper-container .swiper-pagination .swiper-pagination-bullet-active {
+  background: linear-gradient(140deg, #d45b7a, #fda576);
+  width: 16px;
 }
 
 #playlist .swiper-slide {
@@ -812,8 +840,6 @@
 #playlist .swiper-container {
   overflow: hidden;
   position: relative;
-  width: calc(100% - 180px);
-  height: 230px;
   margin-top: 15px;
 }
 
@@ -824,18 +850,6 @@
   z-index: 0;
   width: 100%;
   height: 230px;
-}
-
-#playlist .swiper-container .swiper-pagination .swiper-pagination-bullet {
-  background-color: #6f7073;
-  margin: 0 5px;
-  border-radius: 5px;
-  transition: all 0.4s ease;
-}
-
-#playlist .swiper-container .swiper-pagination .swiper-pagination-bullet-active {
-  background: linear-gradient(140deg, #d45b7a, #fda576);
-  width: 16px;
 }
 
 .swiper-button-next,
@@ -864,17 +878,15 @@
   }
   .main-content .top-bar .parts .part2 {
     flex-direction: column-reverse;
-    top: 65px;
+    top: 66px;
   }
   .main-content .top-bar .parts .part2 .item {
+    margin-top: 5px;
     border: 0;
     border-right: 2px solid transparent;
   }
   .main-content .top-bar .parts .part2 .item.active {
     border-color: var(--bg-lv1);
-  }
-  .main-content .top-bar .parts .part2 .item + .item {
-    margin-top: 10px;
   }
   .main-content .top-bar .parts .search-bar input,
   .main-content .top-bar .parts .search-bar .suggest-list {
