--- a/src/css/category_sidebar.css
+++ b/src/css/category_sidebar.css
@@ -1,24 +1,93 @@
+.category-sidebar .menu, body > .new-pl-modal .new-pl-banner a,
+body > .ad-modal .banner-modal-ad > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .category-sidebar {
   background-color: var(--bg-lv8);
   border-right: 1px solid var(--bg-lv6);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  flex-direction: column;
   position: fixed;
   top: 0;
   left: 0;
   width: 240px;
   height: calc(100vh - 90px);
   padding: 70px 0 54px;
-  -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+}
+
+.category-sidebar .title,
+.category-sidebar .title a {
+  color: var(--bg-lv0);
+  font-size: 1.4rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  width: 240px;
+  height: 70px;
+  padding: 0 25px;
+}
+
+.category-sidebar .menu {
+  position: relative;
+  flex-direction: column;
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+.category-sidebar .list {
+  font-size: 1.2rem;
+  width: 100%;
+  margin: 0;
+}
+
+.category-sidebar .list .item {
+  cursor: pointer;
+  height: 38px;
+  margin-left: 3px;
+  padding: 7px 25px;
+  transition: background 0.5s ease;
+}
+
+.category-sidebar .list .item:hover {
+  opacity: 0.6;
+}
+
+.category-sidebar .list .item:hover, .category-sidebar .list .item.active {
+  background-color: var(--bg-lv6);
+  border-left: 5px solid var(--bg-lv0);
+}
+
+.category-sidebar .list .item .bi {
+  font-size: unset;
+}
+
+.category-sidebar .list .item i {
+  margin-right: 10px;
+}
+
+.category-sidebar .horizone-line {
+  position: relative;
+  width: 100%;
+}
+
+.category-sidebar .horizone-line::after {
+  content: '';
+  position: absolute;
+  border-top: 1px solid var(--bg-lv6);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  height: 0;
 }
 
 .category-sidebar .music-option {
@@ -33,77 +102,14 @@
   background-color: transparent;
 }
 
-.category-sidebar .item {
-  cursor: pointer;
-  height: 38px;
-  margin-left: 3px;
-  padding: 7px 25px;
-  -webkit-transition: background 0.5s ease;
-  transition: background 0.5s ease;
-}
-
-.category-sidebar .item .bi {
-  font-size: unset;
-}
-
-.category-sidebar .item i {
-  margin-right: 10px;
-}
-
-.category-sidebar .item:hover {
-  opacity: 0.6;
-}
-
-.category-sidebar .menu {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100%;
-  margin-bottom: 15px;
-}
-
-.category-sidebar .list {
-  font-size: 1.2rem;
-  width: 100%;
-  margin: 0;
-}
-
-.category-sidebar .horizone-line {
-  position: relative;
-  width: 100%;
-}
-
-.category-sidebar .horizone-line::after {
-  content: '';
-  position: absolute;
-  border-top: 1px solid var(--bg-lv6);
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 80%;
-  height: 0;
-}
-
-.category-sidebar .option-scroll-bar {
+.category-sidebar .music-option .option-scroll-bar {
+  margin: 10px -6px 0 0;
   position: absolute;
   width: 100%;
   height: 100%;
-  margin: 10px -6px 0 0;
 }
 
-.category-sidebar .option-list {
+.category-sidebar .music-option .option-list {
   margin: 5px 0 0;
 }
 
@@ -126,59 +132,26 @@
   height: 54px;
 }
 
-.category-sidebar .new-playlist-btn {
+.category-sidebar .create-new-playlist .new-playlist-btn {
   color: var(--bg-lv0);
   font-size: 1.2rem;
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  align-items: center;
+  justify-content: flex-start;
   width: 100%;
   height: 54px;
   padding: 0 28px;
 }
 
-.category-sidebar .title,
-.category-sidebar .title a {
-  color: var(--bg-lv0);
-  font-size: 1.4rem;
-  font-weight: bold;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  position: fixed;
-  top: 0;
-  z-index: 10;
-  width: 240px;
-  height: 70px;
-  padding: 0 25px;
-}
-
-.category-sidebar .item:hover,
-.category-sidebar .item.active {
-  background-color: var(--bg-lv6);
-  border-left: 5px solid var(--bg-lv0);
-}
-
 body > .new-pl-modal,
 body > .ad-modal {
-  display: none;
   background-color: rgba(0, 0, 0, 0.616);
   position: fixed;
+  display: none;
+  z-index: 100;
   top: 0;
   left: 0;
-  z-index: 100;
   width: 100vw;
   height: 100vh;
 }
@@ -186,36 +159,6 @@ body > .ad-modal {
 body > .new-pl-modal.active,
 body > .ad-modal.active {
   display: block;
-}
-
-body > .new-pl-modal .new-pl-banner,
-body > .ad-modal .banner-modal-ad {
-  background: linear-gradient(33deg, #5a1eae -7%, #ce267a 117%);
-  border-radius: 8px;
-  text-align: center;
-  color: var(--bg-lv0);
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 40vw;
-  height: 70vh;
-  padding: 15px 8px;
-  line-height: 1.5;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
 }
 
 body > .new-pl-modal .new-pl-banner {
@@ -229,7 +172,7 @@ body > .new-pl-modal .new-pl-banner a {
 }
 
 body > .new-pl-modal .new-pl-banner a > span {
-  display: none;
+  display: block;
 }
 
 body > .new-pl-modal .new-pl-banner__content > div {
@@ -248,12 +191,12 @@ body > .new-pl-modal .new-pl-banner__overlay {
 
 body > .new-pl-modal input {
   display: block;
-  margin: 15px auto;
   max-width: 80%;
   padding: 7px 5px;
-  border: 3px solid white;
+  margin: 15px auto;
+  font-size: 1.3rem;
   border-radius: 10px;
-  -webkit-transition: all 0.3 ease;
+  border: 3px solid white;
   transition: all 0.3 ease;
 }
 
@@ -268,8 +211,7 @@ body > .ad-modal .banner-modal-ad__content > img {
 }
 
 body > .ad-modal .banner-modal-ad__content > img:hover {
-  -webkit-animation: blink linear 0.6s infinite alternate;
-          animation: blink linear 0.6s infinite alternate;
+  animation: blink linear 0.6s infinite alternate;
 }
 
 body > .ad-modal .banner-modal-ad__content > div {
@@ -279,8 +221,28 @@ body > .ad-modal .banner-modal-ad__content > div {
 }
 
 body > .ad-modal .banner-modal-ad > a:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+body > .new-pl-modal .new-pl-banner,
+body > .ad-modal .banner-modal-ad {
+  background: linear-gradient(33deg, #5a1eae -7%, #ce267a 117%);
+  border-radius: 8px;
+  text-align: center;
+  color: var(--bg-lv0);
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40vw;
+  height: 70vh;
+  padding: 15px 8px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 body > .new-pl-modal .new-pl-banner__content,
@@ -299,22 +261,16 @@ body > .ad-modal .banner-modal-ad > a {
   font-size: 4.2vh;
   padding: 6px 35px;
   margin-top: 7px;
-  -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 body > .new-pl-modal .new-pl-banner a > span,
 body > .ad-modal .banner-modal-ad > a > span {
   margin-left: 10px;
+}
+
+body > .new-pl-modal .new-pl-banner a > span {
+  font-size: 1.4rem;
 }
 
 .category-sidebar .new-pl-banner,
@@ -342,7 +298,6 @@ body > .ad-modal .banner-modal-ad > a > span {
   font-weight: 600;
   font-size: 12px;
   margin-top: 7px;
-  -webkit-transition: all 0.7s ease;
   transition: all 0.7s ease;
 }
 
@@ -354,37 +309,33 @@ body > .ad-modal .banner-modal-ad > a > span {
   width: 100%;
   height: 100px;
   background-color: rgba(255, 255, 255, 0.6);
-  -webkit-transform: skewY(45deg) translateY(210px);
-          transform: skewY(45deg) translateY(210px);
-  -webkit-transition: all 0.7s ease;
+  transform: skewY(45deg) translateY(250px);
   transition: all 0.7s ease;
 }
 
 .banner-modal-ad-link:hover {
-  -webkit-transform: translateY(3px);
-          transform: translateY(3px);
+  transform: translateY(3px);
 }
 
 .banner-modal-ad-link:hover::before {
-  -webkit-transform: skewY(45deg) translateY(-220px);
-          transform: skewY(45deg) translateY(-220px);
+  transform: skewY(45deg) translateY(-250px);
 }
 
 @media screen and (max-width: 1024px) {
+  body > .new-pl-modal .new-pl-banner a > span,
   .banner-modal-ad-link,
-  .category-sidebar .item span,
+  .category-sidebar .list .item span,
   .category-sidebar .title .app-name,
   .category-sidebar .banner-modal-ad,
   .category-sidebar .create-new-playlist span {
     display: none;
   }
-  .category-sidebar .item:hover,
-  .category-sidebar .item.active {
+  .category-sidebar .list .item:hover, .category-sidebar .list .item.active {
     background-color: var(--bg-lv6);
     border: none;
   }
-  .category-sidebar .item,
-  .category-sidebar .item i {
+  .category-sidebar .list .item,
+  .category-sidebar .list .item i {
     margin: 0;
   }
 }
@@ -394,4 +345,3 @@ body > .ad-modal .banner-modal-ad > a > span {
     width: 100px;
   }
 }
-/*# sourceMappingURL=category_sidebar.css.map */
