--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,14 +32,14 @@
 	-webkit-tap-highlight-color: transparent;
 }
 
-::-webkit-scrollbar {
+*::-webkit-scrollbar {
 	width: 5px;
 }
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
 	border-radius: 5px;
 	background-color: transparent;
 }
-::-webkit-scrollbar:horizontal {
+*::-webkit-scrollbar:horizontal {
 	height: 5px;
 }
 
