--- a/src/css/category_sidebar.css
+++ b/src/css/category_sidebar.css
@@ -178,7 +178,7 @@ body > .new-pl-modal .new-pl-banner a > span {
 body > .new-pl-modal .new-pl-banner__content > div {
   padding: 0 5px;
   margin: 6px auto;
-  font-size: 3.5vh;
+  font-size: 1.4rem;
 }
 
 body > .new-pl-modal .new-pl-banner__overlay {
@@ -227,22 +227,21 @@ body > .ad-modal .banner-modal-ad > a:hover {
 body > .new-pl-modal .new-pl-banner,
 body > .ad-modal .banner-modal-ad {
   background: linear-gradient(33deg, #5a1eae -7%, #ce267a 117%);
+  color: var(--bg-lv0);
   border-radius: 8px;
   text-align: center;
-  color: var(--bg-lv0);
-  display: block;
   position: absolute;
+  line-height: 1.5;
+  display: block;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   width: 40vw;
-  height: 70vh;
-  padding: 15px 8px;
-  line-height: 1.5;
+  padding: 25px 8px;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: space-around;
+  transform: translate(-50%, -50%);
 }
 
 body > .new-pl-modal .new-pl-banner__content,
@@ -257,10 +256,10 @@ body > .ad-modal .banner-modal-ad > a {
   border-color: #ffdb00;
   border-radius: 25px;
   color: #bd501d;
-  font-weight: 600;
-  font-size: 4.2vh;
-  padding: 6px 35px;
   margin-top: 7px;
+  font-weight: 600;
+  font-size: 1.2rem;
+  padding: 6px 35px;
   transition: all 0.3s ease;
 }
 
@@ -322,7 +321,6 @@ body > .new-pl-modal .new-pl-banner a > span {
 }
 
 @media screen and (max-width: 1024px) {
-  body > .new-pl-modal .new-pl-banner a > span,
   .banner-modal-ad-link,
   .category-sidebar .list .item span,
   .category-sidebar .title .app-name,
@@ -343,5 +341,11 @@ body > .new-pl-modal .new-pl-banner a > span {
 @media screen and (max-width: 750px) {
   body > .new-pl-modal .new-pl-banner a {
     width: 100px;
+  }
+  body > .new-pl-modal .new-pl-banner a > span {
+    display: none;
+  }
+  .banner-modal-ad-link > span {
+    display: none;
   }
 }
